clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_nrm2<rocblas_double_complex, double> = rocblas_dznrm2;
template <>
static constexpr auto rocblas_nrm2_batched<float, float> = rocblas_snrm2_batched;
template <>
static constexpr auto rocblas_nrm2_batched<double, double> = rocblas_dnrm2_batched;
template <>
static constexpr auto rocblas_nrm2_batched<rocblas_float_complex, float> = rocblas_scnrm2_batched;
template <>
static constexpr auto rocblas_nrm2_batched<rocblas_double_complex, double> = rocblas_dznrm2_batched;
template <>
static constexpr auto rocblas_nrm2_strided_batched<float, float> = rocblas_snrm2_strided_batched;
template <>
static constexpr auto rocblas_nrm2_strided_batched<double, double> = rocblas_dnrm2_strided_batched;
template <>
static constexpr auto
    rocblas_nrm2_strided_batched<rocblas_float_complex, float> = rocblas_scnrm2_strided_batched;
template <>
static constexpr auto
    rocblas_nrm2_strided_batched<rocblas_double_complex, double> = rocblas_dznrm2_strided_batched;
template <>
static constexpr auto rocblas_iamax<float> = rocblas_isamax;
template <>
static constexpr auto rocblas_iamax<double> = rocblas_idamax;
template <>
static constexpr auto rocblas_iamax<rocblas_float_complex> = rocblas_icamax;
template <>
static constexpr auto rocblas_iamax<rocblas_double_complex> = rocblas_izamax;
template <>
static constexpr auto rocblas_iamax_batched<float> = rocblas_isamax_batched;
template <>
static constexpr auto rocblas_iamax_batched<double> = rocblas_idamax_batched;
template <>
static constexpr auto rocblas_iamax_batched<rocblas_float_complex> = rocblas_icamax_batched;
template <>
static constexpr auto rocblas_iamax_batched<rocblas_double_complex> = rocblas_izamax_batched;
template <>
static constexpr auto rocblas_iamax_strided_batched<float> = rocblas_isamax_strided_batched;
template <>
static constexpr auto rocblas_iamax_strided_batched<double> = rocblas_idamax_strided_batched;
template <>
static constexpr auto
    rocblas_iamax_strided_batched<rocblas_float_complex> = rocblas_icamax_strided_batched;
template <>
static constexpr auto
    rocblas_iamax_strided_batched<rocblas_double_complex> = rocblas_izamax_strided_batched;